cnhsit/config/istio-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: cnhsit-dr
  namespace: bff-demo
spec:
  host: cnhsit
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
      tcp:
        maxConnections: 1
    outlierDetection:
      baseEjectionTime: 3m
      consecutive5xxErrors: 1
      interval: 1s
      maxEjectionPercent: 100
